--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "ros.distro": "melodic"
+    "ros.distro": "melodic",
+    "cmake.sourceDirectory": "C:/Users/alial/OneDrive/Masaüstü/PokedexApp/windows/runner"
 }
